synaptic (0.75.5~exp5) UNRELEASEDexperimental; urgency=low

  * common/rpackage.cc:
    - use SetCandidateRelease() when forcing a version to ensure
      that experimental/backports work better

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Feb 2012 20:37:49 +0100

synaptic (0.75.5~exp4) experimental; urgency=low

  * debian/patches/03_hide_browse_documentation.dpatch:
    - fix patch to build on ubuntu

 -- Michael Vogt <mvo@debian.org>  Tue, 07 Feb 2012 21:15:28 +0100

synaptic (0.75.5~exp3) experimental; urgency=low

  * move to dh8
  * modernize packaging
  * debian/patches/11_use-pkexec.dpatch:
    - merged to have pkexec as a additional auth mechanism, thanks
      to Marc Deslaurier (closes: #648311)
  * common/rpackagelister.{cc,h}:
    - add new "Synaptic::ShowAllMultiArch" config option that control
      if all multiarch packages are displayed or only those that are
      not available for the native arch
  * common/rpackageview.{cc,hh}:
    - add ArchitectureView on the main left on multiarch systems

 -- Michael Vogt <mvo@debian.org>  Mon, 06 Feb 2012 19:16:45 +0100

synaptic (0.75.5~exp2) experimental; urgency=low

  * merge changes from Ubuntu:
    - debian/changelog: updated
    - debian/control: add or-dependency policykit-1 for pkexec support
    - debian/rules: install apport hook and pkgexec wrapper
    - pre-build.sh: run autoreconf after updating the configure.in versions
  * debian/control:
    - fix Vcs-Bzr
  * debian/rules:
    - do not build --with-launchpad-integration anymore

 -- Michael Vogt <mvo@debian.org>  Mon, 30 Jan 2012 12:32:01 +0100

synaptic (0.75.5~exp1) experimental; urgency=low

  * merged from lp:synaptic
  * build against libapt in experimental

 -- Michael Vogt <mvo@debian.org>  Tue, 24 Jan 2012 14:37:30 +0100

synaptic (0.75.4) unstable; urgency=low

  * gtk/gtkpkglist.cc:
    - fix potential crash when gtk_pkg_list_iter_children is called
      on a empty list
  * debian/synaptic.postrm: