@@ -3,6 +3,11 @@ synaptic (0.75.5~exp5) UNRELEASEDexperimental; urgency=low
   * common/rpackage.cc:
     - use SetCandidateRelease() when forcing a version to ensure
       that experimental/backports work better
+  * common/rpackageview.cc:
+    - add subview for not-automatic package in the origins filter,
+      this is useful for e.g. debian/experimental or ubuntu-backports
+      Note that you need to force the version using the menu:
+     "Package/Force Version"
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Feb 2012 20:37:49 +0100
 
